samples/_failures_safe/1761279005_06c786_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_846398be.c: In function ‘main’:
./samples/SAFE/__tmp_846398be.c:151:5: error: expected declaration or statement at end of input
  151 |     return 0;
      |     ^~~~~~
